--- a/src/app/client/test.module.css
+++ b/src/app/client/test.module.css
@@ -1,4 +1,3 @@
-  @reference "../global.css";
-  .test {
-    @apply text-2xl font-bold text-red-500;
-  }
+.test {
+  @apply rounded border border-gray-300 uppercase;
+}
