--- a/src/app/components/CoreHeader/CoreHeader.module.css
+++ b/src/app/components/CoreHeader/CoreHeader.module.css
@@ -1,3 +1,9 @@
+.core-header-dark {
+  @apply flex
+    justify-between gap-[2rem] shadow-xl/4 shadow-white  w-full overflow-hidden py-5 px-12;
+}
+
 .core-header {
-  @apply flex  justify-center bg-yellow-300 w-full overflow-hidden p-5;
+  @apply flex
+    justify-between gap-[2rem] shadow-xl/4 shadow-black  w-full overflow-hidden py-5 px-12;
 }
