--- a/src/app/components/CoreFooter/CoreFooter.module.css
+++ b/src/app/components/CoreFooter/CoreFooter.module.css
@@ -1,3 +1,10 @@
 .core-footer {
-  @apply flex justify-center  w-full overflow-hidden mt-auto p-5;
+  @apply flex justify-center w-full overflow-hidden mt-auto p-5;
+}
+
+@media screen and (max-width: 1024px) {
+  .core-footer {
+    display: none;
+  }
+
 }
