--- a/src/app/components/MobileNavigation/MobileNavigation.module.css
+++ b/src/app/components/MobileNavigation/MobileNavigation.module.css
@@ -4,6 +4,6 @@
 
 @media screen and (max-width: 1024px) {
   .core-mobile-navigation {
-    @apply shadow-2xl shadow-black grid grid-cols-4 content-center items-center absolute bottom-[0rem] h-[5rem] w-full  xl:px-12 px-6;
+    @apply shadow-2xl shadow-black grid grid-cols-4 content-center items-center h-[5rem] mt-auto w-full  xl:px-12 px-6;
   }
 }
