--- a/src/app/components/CoreButton/CoreButton.module.css
+++ b/src/app/components/CoreButton/CoreButton.module.css
@@ -1,3 +1,3 @@
 .core-button {
-  @apply flex items-center justify-center py-2 bg-fuchsia-400 text-white rounded hover:bg-fuchsia-700 rounded-xl  h-[3rem] text-center;
+  @apply flex  justify-center cursor-pointer items-center text-white h-[3rem] bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-lg px-5 py-2.5 text-center me-2 mb-2 m-0;
 }
