--- a/src/app/components/CoreHeader/CoreHeader.module.css
+++ b/src/app/components/CoreHeader/CoreHeader.module.css
@@ -1,9 +1,11 @@
 .core-header-dark {
   @apply flex
-    xl:justify-between justify-end  gap-[2rem] shadow-xl/4 shadow-white  w-full overflow-hidden py-5 xl:px-12 px-6;
+  h-[5rem]
+    xl:justify-between justify-end  gap-[2rem] w-full  py-5 xl:px-12 px-6;
 }
 
 .core-header {
   @apply flex
-   xl:justify-between justify-end  gap-[2rem] shadow-xl/4 shadow-black  w-full overflow-hidden py-5 xl:px-12 px-6;
+  h-[5rem]
+ xl:justify-between justify-end  gap-[2rem] w-full py-5 xl:px-12 px-6;
 }
