--- a/src/app/components/CoreInput/CoreInput.module.css
+++ b/src/app/components/CoreInput/CoreInput.module.css
@@ -3,8 +3,19 @@
 }
 
 .core-input {
-  @apply rounded-xl border p-2 outline-none bg-purple-100 border-gray-300 h-[3rem] text-black;
+  @apply rounded-sm text-black border p-2 outline-none border-gray-300 h-[3rem];
 }
 .core-input-label {
-  @apply ml-2;
+  @apply text-black  mb-2 font-semibold;
+}
+
+.core-input-label-dark {
+  @apply text-white font-semibold;
+}
+.core-root-input-dark {
+  @apply flex flex-col w-full;
+}
+
+.core-input-dark {
+  @apply rounded-sm text-white border p-2 outline-none border-gray-300 h-[3rem];
 }
