--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,8 @@
 @import "../components/CoreCalendar/CalendarWeekly.module.css";
 @import "../components/CoreCalendar/CoreCalendar.module.css";
 @import "../components/CoreBreadcrumbs/CoreBreadcrumbs.module.css";
+@import "../components/CoreText/CoreText.module.css";
+@import "../components/CoreHeading/CoreHeading.module.css";
 
 @layer base {
   h1 {
