--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
 @import "../components/CoreText/CoreText.module.css";
 @import "../components/CoreHeading/CoreHeading.module.css";
 @import "../components/CoreDropdown/CoreDropdown.module.css";
+@import "../components/CoreTable/CoreTable.module.css";
 
 @layer base {
   h1 {
@@ -25,7 +26,7 @@
 
   :root {
     --color-primary: #1d4ed8;
-    --color-danger: #ef4444;
+    --color-secondary: #9333ea;
     --color-accent: #f59e0b;
   }
 }
@@ -57,4 +58,11 @@
 .rbc-month-row {
   max-height: 80px;
   border: none !important;
+}
+
+.core-overflow-text {
+  @apply overflow-hidden text-ellipsis whitespace-nowrap;
+}
+.core-center {
+  @apply flex justify-center items-center;
 }
