--- a/src/components/CoreTable/CoreTable.module.css
+++ b/src/components/CoreTable/CoreTable.module.css
@@ -1,5 +1,5 @@
 .core-table {
-  @apply block p-8 rounded-lg shadow-2xl w-full;
+  @apply block p-8 pt-0 rounded-lg shadow-sm w-full;
 }
 .core-table-body {
   @apply grid items-center text-center;
@@ -12,16 +12,16 @@
 }
 
 .core-table-header-item {
-  @apply flex justify-center font-semibold text-base text-stone-800 p-2;
+  @apply flex justify-center items-center font-normal text-base text-gray-400 p-2 cursor-pointer;
 }
 
 .core-table-header-item-dark {
-  @apply flex justify-center font-semibold text-base p-2 text-white;
+  @apply flex justify-center text-base p-2 text-white;
 }
 
 .core-table-row {
   /* background-color: var(--color-primary); */
-  @apply grid gap-4 rounded-full overflow-hidden shadow-md w-full my-5 p-5;
+  @apply grid gap-4 overflow-hidden w-full border-t border-gray-300 p-2;
 }
 .core-table-loader {
   @apply w-[100vw] h-20 bg-gray-200 rounded-full animate-pulse;
