--- a/src/components/CoreInput/CoreInput.module.css
+++ b/src/components/CoreInput/CoreInput.module.css
@@ -3,10 +3,14 @@
 }
 
 .core-input {
-  @apply rounded-sm text-black border p-2 outline-none border-gray-300 h-[3rem];
+  @apply rounded-full text-black border p-2 outline-none border-gray-300 h-[2.5rem];
 }
 .core-input-label {
   @apply text-black  mb-2 font-semibold;
+}
+
+.core-input-flat {
+  @apply border-b outline-none border-gray-300 h-[2.5rem];
 }
 
 .core-input-label-dark {
