--- a/src/components/CoreTable/CoreTable.module.css
+++ b/src/components/CoreTable/CoreTable.module.css
@@ -12,7 +12,7 @@
 }
 
 .core-table-header-item {
-  @apply flex justify-center items-center font-normal text-base text-gray-400 p-2 cursor-pointer;
+  @apply flex justify-center items-center font-semibold text-base text-gray-400 p-2 cursor-pointer;
 }
 
 .core-table-header-item-dark {
@@ -20,8 +20,8 @@
 }
 
 .core-table-row {
-  @apply grid gap-4 overflow-hidden w-full border-t border-gray-300 p-2;
+  @apply grid gap-4 overflow-hidden w-full border-t-2 border-gray-100 p-2;
 }
 .core-table-loader {
-  @apply w-[100vw] h-20 bg-gray-200 animate-pulse;
+  @apply w-[100vw] h-12 bg-gray-200 animate-pulse px-10;
 }
