--- a/src/components/CoreTable/CoreTable.module.css
+++ b/src/components/CoreTable/CoreTable.module.css
@@ -2,7 +2,7 @@
   @apply block  pt-0 rounded-lg shadow-sm w-full;
 }
 .core-table-body {
-  @apply grid items-center text-center;
+  @apply grid items-center text-center overflow-hidden;
 }
 .core-table-header {
   @apply grid gap-4 items-center p-2 rounded-lg;
@@ -23,5 +23,5 @@
   @apply grid gap-4 overflow-hidden w-full border-t-2 border-gray-100 p-2;
 }
 .core-table-loader {
-  @apply w-[100vw] h-12 bg-gray-200 animate-pulse px-10;
+  @apply w-full h-12 bg-gray-200 animate-pulse px-10;
 }
