--- a/src/components/CoreInput/CoreInput.module.css
+++ b/src/components/CoreInput/CoreInput.module.css
@@ -1,9 +1,9 @@
 .core-root-input {
-  @apply flex flex-col w-full;
+  @apply relative flex flex-col w-full h-[3rem];
 }
 
 .core-input {
-  @apply rounded-full text-black border p-2 outline-none border-gray-300 h-[2.5rem];
+  @apply relative rounded-full text-black border p-2 outline-none border-gray-300 h-[3.5rem];
 }
 .core-input-label {
   @apply text-black  mb-2 font-semibold;
@@ -22,4 +22,8 @@
 
 .core-input-dark {
   @apply rounded-sm text-white border p-2 outline-none border-gray-300 h-[3rem];
+}
+
+.error-input-message {
+  @apply absolute bottom-[-2.5rem] text-xs text-red-400 w-full flex justify-start m-1;
 }
