--- a/src/components/CoreInput/CoreInput.module.css
+++ b/src/components/CoreInput/CoreInput.module.css
@@ -6,7 +6,7 @@
   @apply relative rounded-full text-black border p-2 outline-none border-gray-300 h-[3.5rem];
 }
 .core-input-label {
-  @apply text-black  mb-2 font-semibold;
+  @apply text-gray-500 text-start text-sm mb-2;
 }
 
 .core-input-flat {
