--- a/src/components/CoreTable/CoreTable.module.css
+++ b/src/components/CoreTable/CoreTable.module.css
@@ -1,18 +1,18 @@
 .core-table {
-  @apply block  pt-0 rounded-lg shadow-sm w-full   overflow-x-auto;
+  @apply block pt-0 rounded-lg shadow-sm w-full overflow-x-auto;
 }
 .core-table-body {
-  @apply grid items-center text-center lg:w-full w-2xl overflow-hidden;
+  @apply grid items-center text-center w-full overflow-hidden;
 }
 .core-table-header {
-  @apply grid gap-4 items-center  lg:w-full w-2xl p-2 rounded-lg;
+  @apply grid gap-4 items-center w-full p-2 rounded-lg lg:grid hidden;
 }
 .core-table-header-dark {
-  @apply grid gap-4 items-center p-2 rounded-lg bg-slate-900;
+  @apply grid gap-4 items-center p-2 rounded-lg bg-slate-900 lg:grid hidden;
 }
 
 .core-table-header-item {
-  @apply flex justify-center items-center font-semibold text-base text-gray-400 p-2 cursor-pointer;
+  @apply flex justify-center items-center font-semibold text-base text-gray-400 px-10 py-2 cursor-pointer;
 }
 
 .core-table-header-item-dark {
@@ -20,15 +20,27 @@
 }
 
 .core-table-row {
-  @apply grid gap-4 overflow-hidden w-full border-t-2 border-gray-100 p-6;
+  @apply grid gap-4 items-start w-full border-t-2 border-gray-100 xl:p-6 px-3 py-6;
 }
 .core-table-loader {
   @apply w-full h-12 bg-gray-200 animate-pulse px-10;
 }
 
 .core-button-row-wrapper {
-  @apply flex justify-center items-center px-10 gap-3;
+  @apply flex lg:justify-center justify-start items-center lg:px-10 px-0 gap-3;
 }
 .core-table-image {
   @apply w-10 h-10 rounded-full object-cover;
+}
+
+.core-table-confirm {
+  @apply w-6 h-6 text-green-500 rounded-sm bg-green-200 p-1 cursor-pointer;
+}
+
+.core-table-cancel {
+  @apply w-6 h-6 text-red-600 bg-red-200 rounded-sm p-1 cursor-pointer;
+}
+
+.core-table-delete {
+  @apply w-4 h-4 text-red-600 cursor-pointer;
 }
