--- a/src/components/CoreDropdown/CoreDropdown.module.css
+++ b/src/components/CoreDropdown/CoreDropdown.module.css
@@ -3,8 +3,8 @@
 }
 
 .core-select-element {
-  @apply block w-full rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm shadow-sm
-         focus:border-blue-500 focus:ring-2 focus:ring-blue-500 focus:outline-none outline-none cursor-pointer;
+  @apply block w-full rounded-full border border-gray-300 bg-transparent px-3 py-2 text-sm shadow-sm
+          focus:outline-none outline-none cursor-pointer;
 }
 
 .core-select-element:disabled {
@@ -12,5 +12,5 @@
 }
 
 .core-select-option {
-  @apply text-gray-700 absolute bottom-0;
+  @apply !rounded-full text-gray-700 absolute bottom-0;
 }
