--- a/src/components/CoreInput/CoreInput.module.css
+++ b/src/components/CoreInput/CoreInput.module.css
@@ -17,13 +17,13 @@
   @apply text-white font-semibold;
 }
 .core-root-input-dark {
-  @apply flex flex-col w-full;
+  @apply relative rounded-full flex flex-col w-full;
 }
 
 .core-input-dark {
-  @apply rounded-sm text-white border p-2 outline-none border-gray-300 h-[3rem];
+  @apply relative rounded-full text-white border p-2 outline-none border-gray-300 h-[3.5rem];
 }
 
 .error-input-message {
-  @apply absolute bottom-[-2.5rem] text-xs text-red-400 w-full flex justify-start m-1;
+  @apply absolute bottom-[-3.5rem] text-xs text-red-400 w-full flex justify-start m-1;
 }
