--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,16 @@
   }
 }
 
+.no-spinner::-webkit-outer-spin-button,
+.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.no-spinner {
+  -moz-appearance: textfield; /* Firefox */
+}
+
 .container {
   @apply bg-red-200;
 }
