--- a/src/components/CoreTable/CoreTable.module.css
+++ b/src/components/CoreTable/CoreTable.module.css
@@ -42,9 +42,9 @@
 }
 
 .core-table-edit {
-  @apply w-4 h-4 text-teal-600 cursor-pointer;
+  @apply w-4 h-4 cursor-pointer;
 }
 
 .core-table-delete {
-  @apply w-4 h-4 text-red-600 cursor-pointer;
+  @apply w-4 h-4  cursor-pointer;
 }
