new component styles

--- a/src/components/CoreButton/CoreButton.module.css
+++ b/src/components/CoreButton/CoreButton.module.css
@@ -2,11 +2,17 @@
   @apply flex justify-center items-center gap-2 text-base bg-gray-800 rounded-full text-white text-center me-2 mb-2 m-0 cursor-pointer h-[2.5rem] pl-2 pr-3;
 }
 
+.core-button-dark {
+  @apply flex justify-center items-center gap-2 text-base bg-gray-900 rounded-full text-white text-center me-2 mb-2 m-0 cursor-pointer h-[2.5rem] pl-2 pr-3;
+}
+
 .core-button-link {
 }
 
-.core-button-icon {
+.core-button-outline {
+  @apply flex justify-center items-center gap-2 text-base bg-transparent text-gray-800 cursor-pointer h-[2.5rem] rounded-full border border-gray-800;
 }
 
-.core-button-primary {
+.core-button-outline-dark {
+  @apply flex justify-center items-center gap-2 text-base bg-transparent text-white cursor-pointer h-[2.5rem] rounded-full border border-stone-100;
 }
