login page edit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
-@import "./login/loginClient.module.css";
+/* @import "./login/loginClient.module.css"; */
+@import "../app/login/loginClient.module.css";
 @import "../components/CoreInput/CoreInput.module.css";
 @import "../components/CoreCard/CoreCard.module.css";
 @import "../components/CoreButton/CoreButton.module.css";
