adding meals section

--- a/src/components/CoreSlider/coreSlider.module.css
+++ b/src/components/CoreSlider/coreSlider.module.css
@@ -1,12 +1,7 @@
 .core-root-slider .slick-dots li button::before {
-  color: red !important;
   font-size: 0.8rem;
-  border: 1px solid green;
-  border-radius: 50px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding-top: 1rem;
+  color: red;
 }
 
 .core-root-slider .slick-dots {
