meal view updates

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,12 @@
 .core-center {
   @apply flex justify-center items-center;
 }
+
+@layer utilities {
+  .line-clamp-8 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 8;
+  }
+}
