--- a/src/components/CoreTable/CoreTable.module.css
+++ b/src/components/CoreTable/CoreTable.module.css
@@ -23,14 +23,14 @@
   @apply grid gap-4 items-start w-full border-t-1 border-gray-100 xl:p-6 px-3 py-6;
 }
 .core-table-loader {
-  @apply w-full h-20 bg-gray-200 animate-pulse px-10;
+  @apply w-full lg:h-20 h-80 bg-gray-200 animate-pulse px-10;
 }
 
 .core-button-row-wrapper {
   @apply flex lg:justify-center justify-start items-center lg:px-10 px-0 gap-3;
 }
 .core-table-image {
-  @apply w-10 h-10 rounded-full object-cover;
+  @apply xl:w-10 xl:h-10 xl:rounded-full h-[8rem] w-full object-cover;
 }
 
 .core-table-confirm {
