--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,50 +63,46 @@
   @apply bg-red-200;
 }
 
-/* .rbc-day-bg {
+.core-table .fc .fc-table,
+.core-table .fc-theme-standard td,
+.core-table .fc-theme-standard th {
   border: none !important;
-  margin: 1rem;
-} */
-
-/* .rbc-date-cell {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  color: white;
-  border-radius: 50%;
+  width: 50px;
 }
-.rbc-row-bg {
-  max-height: 80px;
+.core-table .fc-table {
+  max-height: 500px;
+  max-width: 500px;
+  background-color: red;
+  /* 
+  max-width: 500px; */
 }
-.rbc-row {
-  height: 80px;
-  padding: 1rem !important;
-}
-.rbc-month-row {
-  max-height: 80px;
-  border: none !important;
-} */
-
-.fc .fc-scrollgrid-liquid {
-  border: none !important;
+.core-table .fc-theme-standard td {
+  max-height: 50px;
 }
 
-.fc table {
-  border: none !important;
+.core-table .fc .fc-daygrid-day-frame {
+  @apply flex flex-col bg-gray-900 min-h-14 max-w-14 flex items-center justify-center !rounded-full text-center m-auto;
+}
+.core-table .fc .fc-day-other > div {
+  @apply bg-[repeating-linear-gradient(45deg,_#f3f4f6_0px,_#f3f4f6_10px,_#e5e7eb_10px,_#e5e7eb_20px)] !min-h-14 !max-w-14 !rounded-full;
+}
+.core-table .fc .fc-highlight {
+  @apply min-h-14 max-w-14  !rounded-full;
+}
+.core-table .fc .fc-day-today {
+  @apply !bg-transparent;
+}
+.core-table .fc .fc-daygrid-day-events {
+  position: absolute !important;
+  right: 0;
+  top: 0;
 }
 
-.fc-theme-standard td,
-.fc-theme-standard th {
-  border: none !important;
+.core-table .fc .fc-event-time,
+.core-table .fc .fc-event-title {
+  display: none !important;
 }
 
-.fc .fc-daygrid-day {
-  /* @apply bg-red-200; */
-}
-.fc .fc-daygrid-day-frame {
-  @apply bg-teal-600 min-h-[50%] w-[50%] flex items-center justify-center rounded-full text-center m-auto;
-}
 .core-center {
   @apply flex justify-center items-center;
 }
