--- a/src/components/CoreSearch/CoreSearch.module.css
+++ b/src/components/CoreSearch/CoreSearch.module.css
@@ -1,5 +1,8 @@
+.core-search-root {
+  @apply w-full relative;
+}
 .core-search-list {
-  @apply absolute bg-gray-500 bottom-[-2rem] left-0 rounded-xl w-full overflow-y-scroll z-100;
+  @apply absolute bg-gray-500 bottom-[-3rem] left-0 rounded-xl w-full overflow-y-scroll z-100;
 }
 
 .core-search-list::-webkit-scrollbar {
