--- a/src/components/CoreSearch/CoreSearch.module.css
+++ b/src/components/CoreSearch/CoreSearch.module.css
@@ -2,7 +2,7 @@
   @apply w-fit relative;
 }
 .core-search-list {
-  @apply absolute bg-gray-700 bottom-[-10rem] left-0 rounded-xl w-full overflow-y-scroll z-100;
+  @apply absolute bg-gray-700 bottom-[-10] left-0 rounded-xl w-full overflow-y-scroll z-100;
 }
 
 .core-search-list::-webkit-scrollbar {
