--- a/src/components/CoreButton/CoreButton.module.css
+++ b/src/components/CoreButton/CoreButton.module.css
@@ -1,9 +1,9 @@
 .core-button {
-  @apply flex justify-center items-center gap-2 text-base bg-gray-800 rounded-full text-white text-center me-2 mb-2 m-0 cursor-pointer h-[2.5rem] px-2;
+  @apply flex justify-center items-center gap-2 text-base bg-gray-800 rounded-full text-white text-center cursor-pointer font-medium  h-[2.4rem] pr-2 pl-3;
 }
 
 .core-button-dark {
-  @apply flex justify-center items-center gap-2 text-base bg-gray-900 rounded-full text-white text-center me-2 mb-2 m-0 cursor-pointer h-[2.5rem] px-2;
+  @apply flex justify-center items-center gap-2 text-base bg-gray-900 rounded-full text-white text-center cursor-pointer font-medium   h-[2.4rem] pr-2 pl-3;
 }
 
 .core-button-link {
