dark theme fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,9 +30,9 @@
   }
 
   :root {
-    --color-primary: #1d4ed8;
-    --color-secondary: #9333ea;
-    --color-accent: #f59e0b;
+    --color-primary: #ff714b;
+    --color-secondary: #c71e64;
+    --color-third: #4d2d8c;
   }
 
   h1,
