--- a/src/components/MobileNavigation/MobileNavigation.module.css
+++ b/src/components/MobileNavigation/MobileNavigation.module.css
@@ -4,6 +4,17 @@
 
 @media screen and (max-width: 1024px) {
   .core-mobile-navigation {
-    @apply shadow-2xl shadow-black grid grid-cols-4 content-center items-center h-[5rem] mt-auto w-full  xl:px-12 px-6 absolute bottom-0 left-0 z-50;
+    @apply grid grid-cols-4 gap-1
+    content-center bg-stone-900 rounded-full h-[5rem] w-[70%] items-center  xl:px-12 px-4  absolute bottom-5 
+     left-1/2 transform -translate-x-1/2 z-40;
+  }
+  .mobile-link {
+    @apply bg-stone-700 rounded-full;
+  }
+  .mobile-link-active {
+    @apply bg-[var(--color-third)] rounded-full;
+  }
+  .icon {
+    @apply w-14 h-14 rounded-full p-3;
   }
 }
