--- a/src/components/MobileNavigation/MobileNavigation.module.css
+++ b/src/components/MobileNavigation/MobileNavigation.module.css
@@ -5,9 +5,10 @@
 @media screen and (max-width: 1024px) {
   .core-mobile-navigation {
     @apply grid grid-cols-4 gap-1
-    content-center bg-stone-900 rounded-full h-[5rem] w-[70%] items-center  xl:px-12 px-4  absolute bottom-5 
+    content-center bg-stone-900 rounded-full h-[5rem] w-[70%] items-center  xl:px-12 px-4  absolute bottom-0  text-white
      left-1/2 transform -translate-x-1/2 z-40;
   }
+
   .mobile-link {
     @apply bg-stone-700 rounded-full;
   }
